--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<title>DVD</title>
 	
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Underdog" rel="stylesheet">
 	<link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/522032430933213195/522825562981531648/dvd.ico" type="image/x-icon">
 
 	<script src="./easeljs-0.7.1.min.js"></script>
