--- a/index.html
+++ b/index.html
@@ -29,4 +29,6 @@
 
 <div id="LayoutFlash" align="center">
 	<canvas id="canvas" width="720" height="540" style="background-color:#000"></canvas>
-</div></body></html>
+<center><b><font face="Ubuntu Mono" color="black">ORIGINAL: http://sketchbrook.co.uk/dvdSim.html</font></b></center>
+</div></body>
+</html>
