--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://sk-ed.github.io/dvd/index.html" />
+<meta http-equiv="refresh" content="0; url=http://sk-ed.github.io/dvd/" />
