--- a/dvd/fast/index.html
+++ b/dvd/fast/index.html
@@ -20,7 +20,7 @@
 			stage.addChild(exportRoot);
 			stage.update();
 
-			createjs.Ticker.setFPS(lib.properties.fps);
+			createjs.Ticker.setFPS(375);
 			createjs.Ticker.addEventListener("tick", stage);
 		}
 	</script>
