--- a/test/index.html
+++ b/test/index.html
@@ -7,4 +7,4 @@
 
 <a class="btn-medium btn-primary" onclick="document.getElementById('outputtext').innerHTML = document.getElementById('settext').value + ' is a trash word ayy lmaooo dab dab dab dab dab'" style="margin-left: 30px; margin-top: 30px">What's your favourite word?</a><br>
 <input id="settext" type="text" class="text-box text-box-medium" name="settext" maxlength="50" style="margin-left: 30px; margin-top: 15px; width: 253.07px"><br>
-<b><font class="font" id="outputtext" name="outputtext" style="margin-left: 30px; margin-top: 15px; display: inline-block;" face="Ubuntu Mono">hey</font></b>
+<b><font class="font" id="outputtext" name="outputtext" style="margin-left: 30px; margin-top: 15px; display: inline-block;" face="Ubuntu Mono"></font></b>
