--- a/dvd/index.html
+++ b/dvd/index.html
@@ -30,4 +30,5 @@
 <div id="LayoutFlash" align="center">
 	<canvas id="canvas" width="720" height="540" style="background-color:#000"></canvas>
 </div></body>
+<center><b><font face="Ubuntu Mono" color="black">ORIGINAL: http://sketchbrook.co.uk/dvdSim.html</font></b></center>
 </html>
