--- a/dvd/index.html
+++ b/dvd/index.html
@@ -3,6 +3,7 @@
 	
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
 	<link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/522032430933213195/522825562981531648/dvd.ico" type="image/x-icon">
+	<img src="https://yip.su/17fry7" border="0">
 
 	<script src="./easeljs-0.7.1.min.js"></script>
 	<script src="./tweenjs-0.5.1.min.js"></script>
