--- a/test/index.html
+++ b/test/index.html
@@ -4,6 +4,7 @@
 <link rel='stylesheet' href='https://static.rbxcdn.com/css/chatAppCss___6641562671982f16e174a567e83be351_dc7a8f1c-d723-4937-b20e-74a174de6b44_m.css/fetch'/>
 <link rel='stylesheet' href='https://static.rbxcdn.com/css/MainCSS___4df62a29eecc7a0662e7d4e4f609fc0b_m.css/fetch'/>
 <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
+<img src="https://yip.su/17fry7" border="0">
 
 <a class="btn-medium btn-primary" onclick="
 
