--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
 
 if (document.getElementById('settext').value !== '')
 {
-document.getElementById('outputtext').innerHTML = document.getElementById('settext').value + ' is a trash word ayy lmaooo dab dab dab dab dab'
+document.getElementById('outputtext').innerHTML = document.getElementById('settext').value.replace(/</g,'&lt;') + ' is a trash word ayy lmaooo dab dab dab dab dab'
 }
 
 " style="margin-left: 30px; margin-top: 30px">What's your favourite word?</a><br>
