--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<meta http-equiv="refresh" content="0; url=http://sk-ed.github.io/dvd/" />
+<script>let pn = window.location.pathname;
+if(pn.test(/404/g) {
+    pn = <page>;
+}
+console.log(pn);</script>
