--- a/index.html
+++ b/index.html
@@ -1,5 +1,2 @@
-<script>let pn = window.location.pathname;
-if(pn.test(/404/g) {
-    pn = <page>;
-}
-console.log(pn);</script>
+<link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
+<b><font face="Ubuntu Mono" color="black">you're not gonna find anything here lol</font></b>
