--- a/404.html
+++ b/404.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
+<b><font id="readtext" face="Ubuntu Mono" color="black"></font></b>
 <script>
-console.log(window.location.pathname);
+document.getElementById("readtext").innerHTML = "hi"
 </script>
