--- a/404.html
+++ b/404.html
@@ -2,5 +2,5 @@
 <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
 <b><font id="readtext" face="Ubuntu Mono" color="black"></font></b>
 <script>
-document.getElementById("readtext").innerHTML = "hi"
+document.getElementById("readtext").innerHTML = window.location.pathname.substring(1).toString()
 </script>
