--- a/404.html
+++ b/404.html
@@ -2,11 +2,5 @@
 <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
 <b><font id="readtext" face="Ubuntu Mono" color="black"></font></b>
 <script>
-function parseHtmlEntities(str) {
-	return str.replace(/&#([0-9]{1,3});/gi, function(match, numStr) {
-		var num = parseInt(numStr, 10); // read num as normal number
-		return String.fromCharCode(num);
-	});
-}
-document.getElementById("readtext").innerHTML = parseHtmlEntities(window.location.pathname.substring(1).toString())
+document.getElementById("readtext").innerHTML = decodeURI(window.location.pathname.substring(1).toString())
 </script>
