--- a/404.html
+++ b/404.html
@@ -2,5 +2,8 @@
 <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
 <b><font id="readtext" face="Ubuntu Mono" color="black"></font></b>
 <script>
-document.getElementById("readtext").innerHTML = decodeURI(window.location.pathname.substring(1).toString())
+function sanitize(string){
+	return string.replace(/[.*+?^${}()|[\]\\]/g, '\\$&'); // $& means the whole matched string
+}
+document.getElementById("readtext").innerHTML = decodeURI(window.location.pathname.substring(1).toString()).replace(/</g, "\<" )
 </script>
