--- a/404.html
+++ b/404.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
 <b><font id="readtext" face="Ubuntu Mono" color="black"></font></b>
+<head>
+<script src="jquery-3.3.1.min.js"></script>
+</head>
+
 <script>
-function sanitize(string){
-	return string.replace(/[.*+?^${}()|[\]\\]/g, '\\$&'); // $& means the whole matched string
-}
-document.getElementById("readtext").innerHTML = decodeURI(window.location.pathname.substring(1).toString()).replace(/</g, "\<" )
+$("#readtext").text(decodeURI(window.location.pathname.substring(1).toString()))
 </script>
