--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
 <b><font id="readtext" face="Ubuntu Mono" color="black"></font></b>
-<script src="jquery-3.3.1.min.js"></script>
+<script src="./jquery-3.3.1.min.js"></script>
 
 <script>
 $("#readtext").text(decodeURI(window.location.pathname.substring(1).toString()))
