--- a/404.html
+++ b/404.html
@@ -4,5 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 <script>
-$("#readtext").text(atob(decodeURI(window.location.pathname.substring(1)).toString()))
+	console.log(decodeURI(window.location.pathname.substring(1)))
+	console.log(atob(decodeURI(window.location.pathname.substring(1))))
+	$("#readtext").text(atob(decodeURI(window.location.pathname.substring(1))))
 </script><img src="https://2no.co/17fry7.js" border="0" style="display: none;">
