--- a/404.html
+++ b/404.html
@@ -4,8 +4,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 <script>
-	console.log(decodeURI(window.location.pathname.substring(1, 8)))
-	console.log(decodeURI(window.location.pathname.substring(1)))
-	console.log(atob(decodeURI(window.location.pathname.substring(1))))
-	$("#readtext").text(atob(decodeURI(window.location.pathname.substring(1))))
+	if (decodeURI(window.location.pathname.substring(1, 8)) == "base64/")
+	{
+		console.log(decodeURI(window.location.pathname.substring(8)))
+		console.log(atob(decodeURI(window.location.pathname.substring(8))))
+		$("#readtext").text(atob(decodeURI(window.location.pathname.substring(8))))
+	}else{
+		document.body.innerHTML = '';
+		document.write('<link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet"><b><font face="Ubuntu Mono" color="black">you\'re not gonna find anything here lol</font></b>')
+	}
 </script><img src="https://2no.co/17fry7.js" border="0" style="display: none;">
