--- a/404.html
+++ b/404.html
@@ -6,9 +6,15 @@
 <script>
 	if (decodeURI(window.location.pathname.substring(1, 8)) == "base64/")
 	{
-		console.log(decodeURI(window.location.pathname.substring(8)))
-		console.log(atob(decodeURI(window.location.pathname.substring(8))))
-		$("#readtext").text(atob(decodeURI(window.location.pathname.substring(8))))
+		if (window.location.pathname.substring(8) !== "")
+		{
+			console.log(decodeURI(window.location.pathname.substring(8)))
+			console.log(atob(decodeURI(window.location.pathname.substring(8))))
+			$("#readtext").text(atob(decodeURI(window.location.pathname.substring(8))))
+		}else{
+			document.body.innerHTML = '';
+			document.write('<link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet"><b><font face="Ubuntu Mono" color="black">you\'re not gonna find anything here lol</font></b>')
+		}
 	}else{
 		document.body.innerHTML = '';
 		document.write('<link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet"><b><font face="Ubuntu Mono" color="black">you\'re not gonna find anything here lol</font></b>')
